--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,16 @@ import Layout from '../layouts/Layout.astro';
 import Markdown from '../components/Markdown.astro';
 
 const explainer = `
-An Astro website can go way beyond static pages - on the right platform.
+New Server GTPS [Growtopia Private Server] By OneDev
 
-Netlify supports not only [Streaming SSR](https://docs.astro.build/en/guides/server-side-rendering/#html-streaming) and fast [Edge Middleware](https://docs.astro.build/en/guides/middleware/), but also [on-demand revalidation](https://www.netlify.com/blog/cache-tags-and-purge-api-on-netlify/) and [stale-while-revalidate](https://www.netlify.com/blog/swr-and-fine-grained-cache-control/). 
-Any page or data can be rebuilt only when needed, without site visitors ever getting a performance hit.
+Join us and playing together
 `;
 ---
 
-<Layout title="Welcome to Astro.">
-    <h1 class="mb-10">Netlify Platform Starter for Astro</h1>
+<Layout title="Welcome to Growtopia Korea Private Server">
+    <h1 class="mb-10">Growtopia Korea Private Server</h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
     <p>
-        <a href="https://docs.netlify.com/frameworks/astro/" class="btn btn-lg sm:min-w-64">Read the Docs</a>
+        <a href="https://discord.com/channels/1424595866680955063/1425210157503217856" class="btn btn-lg sm:min-w-64">How To Play</a>
     </p>
 </Layout>
