--- a/src/pages/blobs/index.astro
+++ b/src/pages/blobs/index.astro
@@ -5,11 +5,9 @@ import ShapeEditor from './_components/ShapeEditor.tsx';
 import { uploadDisabled } from '../../utils';
 
 const explainer = `
-[Netlify Blobs](https://docs.netlify.com/blobs/overview/) provides an object store for any kind of data, be it JSON, binary, 
-or [really](https://mk.gg/projects/chalkstream) anything else ([really!](https://mk.gg/projects/turbofan)). In this example, the blob store is used to **hold the data of user-generated random blobby shapes**.
-
-Below is an Astro island with a React component for editing, uploading and viewing blobs to the blob store 🙂.
-`;
+About Growtopia Korea private server? : we are opening a new server specifically for new users and new players
+This server is still in a developing condition, and we hope that users and players will like it
+don't worry, if you have any questions please send them to our [discord] (https://discord.gg/qBKCjm3xE4)`;
 
 const uploadDisabledText = `
 User uploads are disabled in this site. To run your own and try it out: 
