--- a/src/pages/edge/not-australia/index.astro
+++ b/src/pages/edge/not-australia/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../../layouts/Layout.astro';
 import EdgeFunctionExplainer from '../../../components/EdgeFunctionExplainer.astro';
 ---
 
-<Layout title="Not Australia">
-    <h1 class="mb-10">You&apos;re not in Australia!</h1>
+<Layout title="Not Player GTKPS">
+    <h1 class="mb-10">You&apos;re not player GTKRPS</h1>
     <EdgeFunctionExplainer />
 </Layout>
