--- a/src/pages/edge/australia/index.astro
+++ b/src/pages/edge/australia/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../../layouts/Layout.astro';
 import EdgeFunctionExplainer from '../../../components/EdgeFunctionExplainer.astro';
 ---
 
-<Layout title="In Australia">
-    <h1 class="mb-10">You are in Australia!</h1>
+<Layout title="You Are Player GTKRPS">
+    <h1 class="mb-10">You Are Player GTKRPS!</h1>
     <EdgeFunctionExplainer />
 </Layout>
