Update and rename index.astro to index.astro

--- a/src/pages/edge/Not-Player-gtkr/index.astro
+++ b/src/pages/edge/Not-Player-gtkr/index.astro
@@ -4,6 +4,6 @@ import EdgeFunctionExplainer from '../../../components/EdgeFunctionExplainer.ast
 ---
 
 <Layout title="Not Player GTKPS">
-    <h1 class="mb-10">You&apos;re not player GTKRPS</h1>
+    <h1 class="mb-10">You&apos;re Not Player GTKRPS</h1>
     <EdgeFunctionExplainer />
 </Layout>
